[tool.poetry]
name = "repl-nix-enigmatestserver"
version = "0.1.0"
description = ""
authors = ["Replit user <<>>"]
readme = "README.md"
packages = [{include = "repl_nix_enigmatestserver"}]

[tool.poetry.dependencies]
python = "^3.10"
flask-sqlalchemy = "^3.1.1"
flask-wtf = "^1.2.1"
wtforms = "^3.1.1"
flask = "^3.0.0"
flask-login = "^0.6.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
